# torch-overlay

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: beta.yml  release.yml
data/offline/: difficulty.ko.json  items.ko.json  maps.ko.json
docs/: beta-updater-test.ko.md  local-test-debug-pipeline.ko.md  local-updater-test.ko.md  log-parsing-rules.ko.md  main-updater-test.ko.md  offline-items-data.ko.md  overlay-interaction-rules.ko.md  release-update-design.ko.md  valuation-db-model.ko.md
mockups/: tli-tracker-mockup.html
scripts/: build_offline_items.py  build_offline_maps.py  build_release_local.ps1  build_update_test.ps1  capture_mockup.ps1  dev_tauri.ps1  install_update_test_old.ps1  smoke-web.mjs  update-test-server.mjs
src/: App.svelte  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  diagnostics.rs  main.rs  offline_items.rs  parser.rs  tracker.rs
src/lib/: chart.ts  format.ts  sample-data.ts  tauri.ts  types.ts
