[package]
name = "tli-crystal-tracker"
version = "0.1.0"
description = "Torchlight Infinite crystal tracker overlay"
authors = ["TLI Crystal Tracker"]
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
thiserror = "1"
